--- a/www/app/Settings/Templates/menu.html
+++ b/www/app/Settings/Templates/menu.html
@@ -42,6 +42,8 @@
       <ion-item ng-click="gotoSetting('callhistory')"><abbr translate="w_settings.options.call_history.title"></abbr> <i class="ion-ios-arrow-forward"></i></ion-item>
       <ion-item ng-click="gotoSetting('ringtones')" prevent-on-offline="click"><abbr translate="w_settings.options.ringtones.title"></abbr> <i class="ion-ios-arrow-forward"></i></ion-item>
       <ion-item onclick="window.open('http://callpalapp.com/privacy/', '_system')"><abbr translate="w_settings.options.terms_conditions.title"></abbr> <i class="ion-ios-arrow-forward"></i></ion-item>
+      <ion-item ng-click="gotoSetting('avatarapp')" prevent-on-offline="click">Avatar <i class="ion-ios-arrow-forward"></i></ion-item>
+
       <ion-item ng-show="debug == true" ng-click="logout()" prevent-on-offline="click"><abbr translate="w_settings.options.logout.title"></abbr> <i class="ion-close-circled"></i></ion-item>
     </ion-list>
 
